--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 .white { color: #fff; }
 .white-50 { color: #d7ccc0; }
 .light { color: #f5f4f0; }
-.main { color: #fe8a02; }
+.light-text { color: #fe8a02; }
 .dark-main { color: #42413c; }
 .dark { color: #2a2626; }
 .dark-50 { color: #908d8b; }
@@ -14,6 +14,11 @@
 /* Шрифты */
 .open-sans { font-family: 'Open Sans', sans-serif; }
 .neucha { font-family: 'Neucha', cursive; }
+.neucha-regular {
+  font-family: "Neucha", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
 
 /* Размер шрифта: 16px */
 .font-size-16 { font-size: 16px; }
@@ -31,10 +36,11 @@
 .font-size-34 { font-size: 34px; }
 
 /* Секции */
-.container { max-width: 1110px; }
-
-/* Ограничение по ширине контента: 1110px */
-.container { max-width: 1110px; }
+.container { 
+  position: relative;
+  max-width: 1110px; 
+  margin: 0 auto;
+}
 
 /* Выравнивание по центру */
 .center { text-align: center; }
@@ -42,19 +48,89 @@
 /* Отступы по 100 пикселей сверху и снизу */
 .padding-100 { padding: 100px 0; }
 
+/* Фоновое изображение */
+.section-background {
+  position: relative;
+}
+
+.section-background::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.1;
+  z-index: -2;
+}
+
 body {
+  margin: 0 auto;
+  width: 1440px;
   background-color: #ffffff;
 }
 
+h1 {
+  font-family: "Neucha", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .header {
+  height: 914px;
+  position: relative;
+  background-color: #F5F4F0;
+  z-index: -5;
+}
+
+.header-title {
+  font-size: 72px;
+  line-height: 1.2;
+  padding-top: 100px;
+  margin-bottom: 185px;
+}
+
+.header-image {
+  position: absolute;
+  top: 55px;
+  right: -270px;
+  height: 525px;
+  width: auto;
+  z-index: -1;
+}
+
+/* Стили для header-content */
+.header-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-column {
+  width: 48%;
+}
+
+/* Стили для кнопки */
+.button {
+  display: inline-block;
+  padding: 12px 24px;
   background-color: #fe8a02;
-  height: 215px;
-  width: 1440px;
-  margin: 0 auto;
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 4px;
+  margin-top: 20px;
+}
+
+/* Стили для main-title */
+.main-title {
+  font-size: 60px;
+  line-height: 1.2;
+  margin-bottom: 30px;
 }
 
 .footer {
   height: 581px;
-  width: 1440px;
-  margin: 0 auto;
 }
