--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -198,6 +198,8 @@ h1 {
 .navigation-section {
   background: #42413C;
   padding: 200px 0 100px 0; /* Дополнительный отступ сверху для компенсации вылета видео */
+  position: relative;
+  z-index: 1;
 }
 
 .navigation-title {
