--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -522,24 +522,31 @@ p.center.margin-30 {
 
 /* Стили для подвала */
 .footer {
-  background: #42413C;
-  padding: 100px 0 60px 0;
+  background: #FFFFFF;
+  padding: 0 0 100px 0;
+  height: 581px;
 }
 
 .footer-subscription {
+  margin-bottom: 76px;
+  height: 190px;
   background: #42413C;
-  padding: 40px;
-  margin-bottom: 60px;
+  padding-top: 40px;
+  margin-bottom: 0;
 }
 
 .subscription-content {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  margin-bottom: 20px;
 }
 
-.subscription-text h2 {
+.subscription-text {
+  padding-left: 55px;
+  padding-right: 145px;
+}
+
+.subscription-text h2, .subscription-text p {
   font-size: 34px;
   line-height: 1.2em;
   font-family: "Neucha", cursive;
@@ -547,20 +554,31 @@ p.center.margin-30 {
   margin-bottom: 10px;
 }
 
-.subscription-text p {
-  font-size: 16px;
-  line-height: 1.6em;
-  font-family: 'Open Sans', sans-serif;
-  color: #fff;
+.subscription-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.subscription-form {
+.input-group {
+  position: relative;
   display: flex;
   gap: 10px;
 }
 
+/* Стили для span "Электронная почта" */
+.subscription-form span {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 160%;
+  letter-spacing: 0%;
+  color: #FFFFFF;
+}
+
 .email-input {
   height: 50px;
+  width: 490px;
   padding: 15px;
   border: none;
   border-radius: 4px;
@@ -576,7 +594,10 @@ p.center.margin-30 {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  position: relative;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .send-button::before {
@@ -585,11 +606,12 @@ p.center.margin-30 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 20px;
-  height: 20px;
+  width: 70px;
+  height: 50px;
   background-image: url(../img/send.svg);
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: center;
 }
 
 .agreement-text {
@@ -597,7 +619,6 @@ p.center.margin-30 {
   line-height: 1.4;
   font-family: 'Open Sans', sans-serif;
   color: #fff;
-  text-align: center;
 }
 
 .terms-link {
