Добавление стилей для секции "Искажение новизны": объединение стилей с секцией "Эффект ИКЕА" для улучшения визуального восприятия и упрощения кода.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -394,7 +394,7 @@ p.center.margin-30 {
 }
 
 /* Специальные стили для секции "Эффект ИКЕА" */
-#ikea-effect.cognitive-bias-section {
+#ikea-effect.cognitive-bias-section, #distortion-of-novelty.cognitive-bias-section {
   padding-top: 0px;
   padding-bottom: 0px;
 }
