--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -394,6 +394,11 @@ p.center.margin-30 {
 }
 
 /* Специальные стили для секции "Эффект ИКЕА" */
+#ikea-effect {
+  background-color: #F5F4F0;
+  z-index: -1;
+}
+
 #ikea-effect.cognitive-bias-section, #distortion-of-novelty.cognitive-bias-section {
   padding-top: 0px;
   padding-bottom: 0px;
