Изменение ширины контейнера на максимальную и установка ширины 100% для улучшения адаптивности. Добавление свойства scrollbar-gutter для стабильного отображения полосы прокрутки.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -43,7 +43,8 @@
 
 /* Секции */
 .container {
-  width: 1110px;
+  max-width: 1110px;    /* вместо width: 1110px; */
+  width: 100%;
   margin: 0 auto;
   position: relative;
   padding-top: 100px;
@@ -78,6 +79,7 @@
 body {
   margin: 0;
   background-color: #ffffff;
+  scrollbar-gutter: stable both-edges;
 }
 
 h1 {
