--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -43,8 +43,7 @@
 
 /* Секции */
 .container {
-  max-width: 1110px;    /* вместо width: 1110px; */
-  width: 100%;
+  width: 1110px;
   margin: 0 auto;
   position: relative;
   padding-top: 100px;
@@ -77,9 +76,9 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
+  width: 1440px;
   background-color: #ffffff;
-  scrollbar-gutter: stable both-edges;
 }
 
 h1 {
