--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,9 +19,10 @@
 
 /* Шрифты */
 .open-sans { font-family: "Open Sans", sans-serif; }
-.neucha { font-family: "Neucha", cursive; }
+.neucha { font-family: Neucha, cursive; }
+
 .neucha-regular {
-  font-family: "Neucha", cursive;
+  font-family: Neucha, cursive;
   font-weight: 400;
   font-style: normal;
 }
@@ -267,12 +268,6 @@ p.center.margin-30 {
   color: #fe8a02;
 }
 
-
-
-
-
-
-
 /* Стили для секции навигации */
 .navigation-section {
   background: #42413c;
@@ -284,7 +279,7 @@ p.center.margin-30 {
 .navigation-title {
   font-size: 52px;
   line-height: 1.2em;
-  font-family: "Neucha", cursive;
+  font-family: Neucha, cursive;
 }
 
 .navigation-cards {
@@ -325,7 +320,7 @@ p.center.margin-30 {
 
 .card-number {
   font-size: 64px;
-  font-family: "Neucha", cursive;
+  font-family: Neucha, cursive;
   line-height: 1;
   margin-bottom: 40px;
   color: #42413c;
@@ -338,7 +333,7 @@ p.center.margin-30 {
 .card-title {
   font-size: 34px;
   line-height: 1.2em;
-  font-family: "Neucha", cursive;
+  font-family: Neucha, cursive;
   color: #fe8a02;
   margin-bottom: 16px;
 }
@@ -397,9 +392,6 @@ p.center.margin-30 {
   padding-bottom: 0;
 }
 
-
-
-
 #premature-optimization .bias-category,
 #hyperbolic-depreciation .bias-category {
   color: #d7ccc0;
@@ -445,7 +437,7 @@ p.center.margin-30 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../img/background.png);
+  background-image: url("../img/background.png");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.1;
@@ -589,7 +581,7 @@ p.center.margin-30 {
 .subscription-text h2, .subscription-text p {
   font-size: 34px;
   line-height: 1.2em;
-  font-family: "Neucha", cursive;
+  font-family: Neucha, cursive;
   color: #fff;
   margin-bottom: 10px;
 }
