--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -367,9 +367,10 @@ p.center.margin-30 {
   z-index: -1;
 }
 
-#ikea-effect.cognitive-bias-section, #distortion-of-novelty.cognitive-bias-section {
-  padding-top: 0px;
-  padding-bottom: 0px;
+#ikea-effect.cognitive-bias-section,
+#distortion-of-novelty.cognitive-bias-section {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 #ikea-effect.cognitive-bias-section::before {
@@ -379,7 +380,7 @@ p.center.margin-30 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../img/background.png);
+  background-image: url("../img/background.png");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.1;
@@ -392,9 +393,25 @@ p.center.margin-30 {
   padding-bottom: 0;
 }
 
+.bias-category {
+  font-size: 24px;
+  line-height: 1.2em;
+  font-family: Neucha, cursive;
+  color: #908d8b;
+  margin-bottom: 10px;
+}
+
 #premature-optimization .bias-category,
 #hyperbolic-depreciation .bias-category {
   color: #d7ccc0;
+}
+
+.bias-title {
+  font-size: 60px;
+  line-height: 1.2em;
+  font-family: Neucha, cursive;
+  color: #2a2626;
+  margin-bottom: 30px;
 }
 
 #premature-optimization .bias-title,
@@ -404,9 +421,50 @@ p.center.margin-30 {
   color: #fff;
 }
 
+.bias-description {
+  font-size: 34px;
+  line-height: 1.2em;
+  font-family: Neucha, cursive;
+  color: #2a2626;
+}
+
+.manifestation-title {
+  font-size: 14px;
+  text-transform: uppercase;
+  line-height: 1.2em;
+  font-family: "Open Sans", sans-serif;
+  color: #fff;
+  background: #b09a81;
+  padding: 5px 10px;
+  margin-bottom: 20px;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+#premature-optimization .manifestation-title,
+#hyperbolic-depreciation .manifestation-title {
+  background: #fff;
+  color: #b09a81;
+}
+
+.manifestation-content p {
+  font-size: 16px;
+  line-height: 1.6;
+  font-family: "Open Sans", sans-serif;
+  color: #2a2626;
+}
+
 #premature-optimization .manifestation-content p,
 #hyperbolic-depreciation .manifestation-content p {
   color: #fff;
+}
+
+.bias-header {
+  display: flex;
+  gap: 30px;
+  align-items: flex-start;
+  margin-bottom: 100px;
 }
 
 #premature-optimization .bias-header,
@@ -444,13 +502,6 @@ p.center.margin-30 {
   z-index: 0;
 }
 
-.bias-header {
-  display: flex;
-  gap: 30px;
-  align-items: flex-start;
-  margin-bottom: 100px;
-}
-
 .bias-header-left {
   flex: 0 0 auto;
   width: 578px;
@@ -472,43 +523,6 @@ p.center.margin-30 {
   filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
 }
 
-.bias-category {
-  font-size: 24px;
-  line-height: 1.2em;
-  font-family: Neucha, cursive;
-  color: #908d8b;
-  margin-bottom: 10px;
-}
-
-.bias-title {
-  font-size: 60px;
-  line-height: 1.2em;
-  font-family: Neucha, cursive;
-  color: #2a2626;
-  margin-bottom: 30px;
-}
-
-.bias-description {
-  font-size: 34px;
-  line-height: 1.2em;
-  font-family: Neucha, cursive;
-  color: #2a2626;
-}
-
-.manifestation-title {
-  font-size: 14px;
-  text-transform: uppercase;
-  line-height: 1.2em;
-  font-family: "Open Sans", sans-serif;
-  color: #fff;
-  background: #b09a81;
-  padding: 5px 10px;
-  margin-bottom: 20px;
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-}
-
 .manifestation-content {
   display: flex;
   gap: 30px;
@@ -517,13 +531,6 @@ p.center.margin-30 {
 .manifestation-left,
 .manifestation-right {
   flex: 1;
-}
-
-.manifestation-content p {
-  font-size: 16px;
-  line-height: 1.6;
-  font-family: "Open Sans", sans-serif;
-  color: #2a2626;
 }
 
 /* Стили для стандартных элементов в секциях когнитивных искажений */
@@ -640,7 +647,7 @@ p.center.margin-30 {
   transform: translate(-50%, -50%);
   width: 70px;
   height: 50px;
-  background-image: url(../img/send.svg);
+  background-image: url("../img/send.svg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
