--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -455,6 +455,14 @@ p.center.margin-30 {
   color: #2a2626;
 }
 
+.subscription-text p {
+  font-size: 34px;
+  line-height: 1.2em;
+  font-family: Neucha, cursive;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
 #premature-optimization .manifestation-content p,
 #hyperbolic-depreciation .manifestation-content p {
   color: #fff;
@@ -578,8 +586,7 @@ p.center.margin-30 {
   padding-top: 15px;
 }
 
-.subscription-text h2,
-.subscription-text p {
+.subscription-text h2 {
   font-size: 34px;
   line-height: 1.2em;
   font-family: Neucha, cursive;
